<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/side_home"
            android:icon="@drawable/ic_home_nav"
            android:title="@string/side_home" />
        <item
            android:id="@+id/side_settings"
            android:icon="@drawable/ic_settings_nav"
            android:title="@string/side_settings" />
        <item
            android:id="@+id/side_help"
            android:icon="@drawable/ic_help_nav"
            android:title="@string/side_help" />
    </group>

        <item
            android:id="@+id/side_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/side_log_out" />
        <item
            android:id="@+id/side_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/side_exit" />

</menu>